<!--
  ~ Copyright (c) 2021.
  ~ Author: Pranay Kr. Srivastava <pranjas@gmail.com>
  ~ Released Under GNU-GPLv3
  -->

<resources>
    <string name="app_name">Windup</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todoItemDescription">Description</string>
    <string name="todoItemStart">Starts On</string>
    <string name="todoItemEnd">Ends On</string>
    <string name="logoutDialog">Logout</string>
    <string name="logoutMessage">Do you want to logout?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="todoItemDescriptionLabel">Label</string>
    <string name="todoItemSharedLabel">Shared With</string>
    <string name="cancelText">Cancel</string>
    <string name="saveText">Save</string>
    <string name="deleteTodoItem">Do you want to delete?</string>
    <string name="todoItemAddedSuccess">Reminder added successfully.</string>
</resources>