<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021.
  ~ Author: Pranay Kr. Srivastava <pranjas@gmail.com>
  ~ Released Under GNU-GPLv3
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

    <!-- Description -->
    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/todoItemDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cardview_shadow_start_color"
        />
    <!-- Description Text. -->
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:maxLines="3"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toRightOf="@id/labelDescription"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        />

    <!-- Start -->
    <TextView
        android:id="@+id/labelStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/dark_green"
        android:text="@string/todoItemStart"
        app:layout_constraintEnd_toEndOf="@id/labelDescription"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/labelDescription"
        app:layout_constraintStart_toStartOf="@id/labelDescription"
        app:layout_constraintTop_toBottomOf="@id/labelDescription" />

    <TextView
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/blue"

        android:ellipsize="end"
        android:maxLines="3"
        app:layout_constraintEnd_toStartOf="@id/guidelineVertical_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/description"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:scrollHorizontally="true"
        />

    <TextView
        android:id="@+id/labelEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/green"
        android:text="@string/todoItemEnd"
        app:layout_constraintStart_toEndOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintEnd_toEndOf="@id/description"
        app:layout_constraintStart_toEndOf="@id/labelEnd"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:background="@color/red"
        android:ellipsize="end"
        android:maxLines="3"
        android:scrollHorizontally="true"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50"
        />
</androidx.constraintlayout.widget.ConstraintLayout>